# Modbus

./: .gitignore  CLAUDE.md  CommPort.cpp  CommPort.h  Doxyfile  LICENSE  Modbus.cpp  Modbus.h  ModbusDummy.cpp  ModbusDummy.h  ModbusRTU.cpp  ModbusRTU.h  ModbusTCP.cpp  ModbusTCP.h  ModbusTCP_IP.cpp  ModbusTCP_IP.h  ModbusTCP_Indy.cpp  ModbusTCP_Indy.h  ModbusTCP_WinSock.cpp  ModbusTCP_WinSock.h  ModbusUDP.cpp  ModbusUDP.h  ModbusUDP_Indy.cpp  ModbusUDP_Indy.h  ModbusUDP_WinSock.cpp  ModbusUDP_WinSock.h  README.md  SerEnum.cpp  SerEnum.h  TECHNICAL_DOCS.md  TECHNICAL_DOCUMENTATION.md
.github/workflows/: pages-docs.yml
Test/: CMakeLists.txt  ModbusTest.cbproj  ModbusTest.cpp  ModbusTestServer.cpp  README-cmake.md
docs/: _comm_port_8cpp.html  _comm_port_8cpp__incl.dot  _comm_port_8h.html  _comm_port_8h__dep__incl.dot  _comm_port_8h__dep__incl.md5  _comm_port_8h__incl.dot  _comm_port_8h__incl.md5  _comm_port_8h_source.html  _modbus_8cpp.html  _modbus_8cpp__incl.dot  _modbus_8cpp__incl.md5  _modbus_8h.html  _modbus_8h__dep__incl.dot  _modbus_8h__dep__incl.md5  _modbus_8h__incl.dot  _modbus_8h_source.html  _modbus_dummy_8cpp.html  _modbus_dummy_8cpp__incl.dot  _modbus_dummy_8cpp__incl.md5  _modbus_dummy_8h.html  _modbus_dummy_8h__dep__incl.dot  _modbus_dummy_8h__dep__incl.md5  _modbus_dummy_8h__incl.dot  _modbus_dummy_8h_source.html  _modbus_r_t_u_8cpp.html  _modbus_r_t_u_8cpp__incl.dot  _modbus_r_t_u_8h.html  _modbus_r_t_u_8h__dep__incl.dot  _modbus_r_t_u_8h__incl.dot  _modbus_r_t_u_8h_source.html  _modbus_t_c_p_8cpp.html  _modbus_t_c_p_8cpp__incl.dot  _modbus_t_c_p_8cpp__incl.md5  _modbus_t_c_p_8h.html  _modbus_t_c_p_8h__dep__incl.dot  _modbus_t_c_p_8h__dep__incl.md5  _modbus_t_c_p_8h__incl.dot  _modbus_t_c_p_8h__incl.md5  _modbus_t_c_p_8h_source.html  _modbus_t_c_p___i_p_8cpp.html  (+201 more)
docs/html/: _comm_port_8cpp.html  _comm_port_8cpp__incl.md5  _comm_port_8h.html  (+99 more)
(+101 files in other folders)
